// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeEditor: action add new tab 1`] = `
Object {
  "fileContent": "content",
  "fileName": "New file",
  "type": "ADD_NEW_TAB",
}
`;

exports[`CodeEditor: action change contract name 1`] = `
Object {
  "contractName": "Abc",
  "type": "EDITOR_CONTRACT_NAME_CHANGE",
}
`;

exports[`CodeEditor: action change create action state 1`] = `
Object {
  "createActionEnable": false,
  "index": 0,
  "sourceCode": "abc",
  "type": "CODE_EDITOR_CHANGE_CREATEACTION",
}
`;

exports[`CodeEditor: action change tab 1`] = `
Object {
  "nextTab": 1,
  "prevTab": 0,
  "type": "ON_TAB_CHANGE",
}
`;

exports[`CodeEditor: action compile code failure 1`] = `
Object {
  "error": "src:6:77: Error: Expected token Semicolon got 'RBrace'
{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }
                                                                            ^
",
  "type": "CODE_EDITOR_COMPILE_FAILURE",
}
`;

exports[`CodeEditor: action compile code request 1`] = `
Object {
  "code": "code",
  "codeType": undefined,
  "type": "CODE_EDITOR_COMPILE_REQUEST",
}
`;

exports[`CodeEditor: action compile code success 1`] = `
Object {
  "response": Object {
    "src": Object {
      "Cloner": Object {
        "funcs": Object {
          "cloneSheep": Object {
            "args": Object {
              "name": Object {
                "dynamic": true,
                "index": 0,
                "type": "String",
              },
            },
            "selector": "0072c6a9",
            "vals": Object {
              "#0": Object {
                "index": 0,
                "type": "Address",
              },
            },
          },
        },
        "vars": Object {
          "clones": Object {
            "atBytes": 0,
            "dynamic": true,
            "entry": Object {
              "typedef": "Sheep",
            },
            "public": true,
            "type": "Array",
          },
          "sheepDNA": Object {
            "atBytes": 32,
            "dynamic": true,
            "public": true,
            "type": "String",
          },
        },
      },
      "Sheep": Object {
        "constr": Object {
          "_dna": Object {
            "dynamic": true,
            "index": 1,
            "type": "String",
          },
          "_name": Object {
            "dynamic": true,
            "index": 0,
            "type": "String",
          },
        },
        "funcs": Object {
          "geneticallyModify": Object {
            "args": Object {
              "_dna": Object {
                "dynamic": true,
                "index": 0,
                "type": "String",
              },
            },
            "selector": "0e3668f8",
            "vals": Object {},
          },
        },
        "vars": Object {
          "dna": Object {
            "atBytes": 32,
            "dynamic": true,
            "public": true,
            "type": "String",
          },
          "name": Object {
            "atBytes": 0,
            "dynamic": true,
            "public": true,
            "type": "String",
          },
        },
      },
    },
  },
  "type": "CODE_EDITOR_COMPILE_SUCCESS",
}
`;

exports[`CodeEditor: action compile file locally 1`] = `
Object {
  "compileError": "src:6:77: Error: Expected token Semicolon got 'RBrace'
{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }
                                                                            ^
",
  "type": "ON_COMPILE_FILE_LOCALLY",
}
`;

exports[`CodeEditor: action on file name change 1`] = `
Object {
  "name": "New modified file name",
  "type": "CHANGE_FILE_NAME",
}
`;

exports[`CodeEditor: action remove tab 1`] = `
Object {
  "index": 0,
  "type": "REMOVE_TAB",
}
`;
